# fibr

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/fibr/: __init__.py  fibr.py  fibr.tcss  fs.py  panel.py
src/fibr/about/: __init__.py  about.py  about.tcss  about.txt
src/fibr/config/: __init__.py  config.py
src/fibr/filebrowser/: __init__.py  filebrowser.py  filebrowser.tcss  filelist.py  infobar.py  panel.py  searchbar.py
src/fibr/filesystem/: __init__.py  create_table.sql  db.py  delete_files.sql  delete_files_not_in_staging.sql  files.py  filesystem.py  filetype.py  get_files_in_dir.sql  get_rowid.sql  insert_files.sql  search.py  search_filename_like.sql  upsert_files_from_staging.sql
src/fibr/fileviewer/: __init__.py  fileviewer.py
src/fibr/panel/: filelist.py  panel.py  panel.tcss  searchbar.py
src/fibr/util/: __init__.py  convert.py  editor.py  log.py  platform.py  shell.py  version.py  viewer.py
