[project]
name = "fibr"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ReneÌ de Hesselle", email = "dehesselle@web.de" }]
requires-python = ">=3.12"
dependencies = ["peewee>=3.18.2", "platformdirs>=4.5.0", "textual~=6.4"]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
]

[project.scripts]
fibr = "fibr:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.urls]
"Source" = "https://github.com/dehesselle/fibr"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/fibr/_hatch_build_hooks_vcs.py"
